--- a/link/carnivorousgallery.html
+++ b/link/carnivorousgallery.html
@@ -19,7 +19,8 @@
 			</div>
 			<h2 class="sub-title-gallery-category">Végétaux présents ici: 
 				<a href="#muscipula">Dionaea muscipula,</a>  
-				<a href="#nepenthes">Nepenthes,</a> 
+				<a href="#nepenthes">Nepenthes,</a>
+				<a href="#nepenthescadre">Nepenthes en cadre,</a>
 				<a href="#pinguicula">Pinguicula,</a> 
 				<a href="#purpurea">Sarracenia purpurea.</a>
 			</h2>        
@@ -48,6 +49,17 @@
 			<img class="flex" src="../assets/img/carnivorous/gallery/nepenthes4.jpg" alt="Nepenthes" title="Nepenthes"/>
 			<img class="flex" src="../assets/img/carnivorous/gallery/nepenthes5.jpg" alt="Nepenthes" title="Nepenthes"/>
 			<img class="flex" src="../assets/img/carnivorous/gallery/nepenthes6.jpg" alt="Nepenthes" title="Nepenthes"/>
+	</section>
+			<hr>
+			<div class="species-title-gallery-category" id="nepenthescadre">Nepenthes en cadre
+				<a href="carnivorousindex.html#nepenthescadre">Voir la fiche info</a>
+			</div>
+			<hr>
+	<section> 																	<!-- NEPENTHES EN CADRE -->
+		    <img class="flex" src="../assets/img/carnivorous/gallery/nepenthescadre(1).jpg" alt="nepenthes en cadre" title="nepenthes en cadre"/>
+		    <img class="flex" src="../assets/img/carnivorous/gallery/nepenthescadre(2).jpg" alt="nepenthes en cadre" title="nepenthes en cadre"/>
+		    <img class="flex" src="../assets/img/carnivorous/gallery/nepenthescadre(3).jpg" alt="nepenthes en cadre" title="nepenthes en cadre"/>
+		    <img class="flex" src="../assets/img/carnivorous/gallery/nepenthescadre(4).jpg" alt="nepenthes en cadre" title="nepenthes en cadre"/>
 	</section>	
 			<hr>
 			<div class="species-title-gallery-category" id="pinguicula">Pinguicula
