--- a/link/carnivorousindex.html
+++ b/link/carnivorousindex.html
@@ -19,7 +19,8 @@
             </div>
                 <h2 class="sub-title-index-category">Végétaux présents ici: 
                   <a href="#muscipula">Dionaea muscipula,</a>  
-                  <a href="#Nepenthes">Nepenthes,</a> 
+                  <a href="#Nepenthes">Nepenthes,</a>
+                  <a href="#nepenthescadre">Nepenthes en cadre,</a>
                   <a href="#Pinguicula">Pinguicula,</a> 
                   <a href="#purpurea">Sarracenia purpurea.</a>
                 </h2>
@@ -74,6 +75,34 @@
         <div class="index-category-tab-content" id="Nepenthes5" hidden="hidden">Je diminue les fréquences d'arrosage en veillant juste à ce que le substrat ne sèche pas.
         </div>
         <div class="index-category-tab-content" id="Nepenthes6" hidden="hidden">Je prépare un mélange de fibre de coco avec du sable de rivière et un peu de vermiculite. <br/>Je les aime bien dans des pots en plastique suspendus.
+        </div>
+      </section>
+        <hr>
+      <section class="index-category-system-tabs">                              <!-- NEPENTHES EN CADRE -->
+        <nav-tabs class="index-category-nav-tabs" id="nepenthescadre">
+            <a href="#nepenthescadre1" aria-selected="true">Nom</a>
+            <a href="#nepenthescadre2">Exposition en été</a>
+            <a href="#nepenthescadre3">Exposition en hiver</a>
+            <a href="#nepenthescadre4">Arrosage en été</a>
+            <a href="#nepenthescadre5">Arrosage en hiver</a>
+            <a href="#nepenthescadre6">Rempotage</a>
+        </nav-tabs>
+        <div class="index-category-tab-content" id="nepenthescadre1"><span class="species">Nepenthes en cadre<a href="carnivorousgallery.html#nepenthescadre">Voir la galerie photo</a></span>
+              <img src="../assets/img/carnivorous/index/nepenthescadre(1).jpg" alt="nepenthes en cadre" title="nepenthes en cadre"/>
+              <img src="../assets/img/carnivorous/index/nepenthescadre(2).jpg" alt="nepenthes en cadre" title="nepenthes en cadre"/>
+              <img src="../assets/img/carnivorous/index/nepenthescadre(3).jpg" alt="nepenthes en cadre" title="nepenthes en cadre"/>
+              <img src="../assets/img/carnivorous/index/nepenthescadre(4).jpg" alt="nepenthes en cadre" title="nepenthes en cadre"/>
+        </div>   
+        <div class="index-category-tab-content" id="nepenthescadre2" hidden="hidden">J'ai placé le cadre ou il ne fait jamais moins de 20°C. Dans une situation assez lumineuses non loin d'une grande fenêtre.
+        </div>
+        <div class="index-category-tab-content" id="nepenthescadre3" hidden="hidden">L'endroitou se trouve le cadre ne descend jamais sous les 18°C et toujours avec une bonne luminosité.
+        </div>
+        <div class="index-category-tab-content" id="nepenthescadre4" hidden="hidden">Je les arrose de manière régulière afin que le substrat ne sèche pas du tout et reste toujours humide. <br>À partir des 2 entonnoirs du haut et aussi avec une grosse seringue afin de cibler plus facilement les alentours des racines. <br/>Ils ont besoin d'une bonne humidité ambiante et de chaleur pour faire de belles urnes.
+        </div>
+        <div class="index-category-tab-content" id="nepenthescadre5" hidden="hidden">Je diminue les fréquences d'arrosage en veillant juste à ce que le substrat ne sèche pas.
+        </div>
+        <div class="index-category-tab-content" id="nepenthescadre6" hidden="hidden">Je prépare un mélange de fibre de coco avec des écorces, quelques gravillons de lave, du sable de rivière et un peu de perlite. <br/>Je les ai installés dans un cadre végétal.
+          <a class="species-repotting-info" href="nepenthescadre.html" alt="installation nepenthes en cadre" title="installation nepenthes en cadre">Voir comment j'installe les nepenthes en cadre</a>
         </div>
       </section>
         <hr>
