--- a/link/otherplantsgallery.html
+++ b/link/otherplantsgallery.html
@@ -19,12 +19,15 @@
                 <h1 class="title-gallery-category" id="top"> Galerie photo de mes Autres plantes vertes</h1>
             </div>
             <section class="all-menu-scroll">                                       <!-- MENU DÉROULANT -->
-                <ul class="menu-scroll" onmouseover="changetext()" onmouseout="starttext()">   
+                <ul class="menu-scroll">   
                   <li class="menu-green"><a id="js-menu-change-text">Végétaux présents ici ...</a>
                     <ul>
                       <li><a href="#">Choisir une plante ...</a>
                         <ul>
                             <li><a href="#anthurium">Anthurium</a></li>
+                            <li><a href="#anthuriumblacklove">Anthurium black love</a></li>
+                            <li><a href="#anthuriummadural">Anthurium madural</a></li>
+                            <li><a href="#anthuriumsamora">Anthurium samora</a></li>
                             <li><a href="#strawberry">Caladium strawberry</a></li>
                             <li><a href="#jurassica">Solanum quitoense jurassica</a></li>
                             <li><a href="#sensation">Spathiphyllum sensation</a></li>
@@ -53,6 +56,42 @@
         <img class="flex" src="../assets/img/otherplants/gallery/anthurium(6).jpg" alt="Anthurium" title="Anthurium"/>
         <img class="flex" src="../assets/img/otherplants/gallery/anthurium(7).jpg" alt="Anthurium" title="Anthurium"/>
         <img class="flex" src="../assets/img/otherplants/gallery/anthurium(8).jpg" alt="Anthurium" title="Anthurium"/>
+    </section>
+    <hr>
+            <div class="species-title-gallery-category" id="anthuriumblacklove">Anthurium black love
+                <a href="otherplantsindex.html#anthuriumblacklove">Voir la fiche info</a>
+            </div>
+            <hr>
+    <section>                                                                   <!-- ANTHURIUM BLACK LOVE -->
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriumblacklove(1).jpg" alt="Anthurium black love" title="Anthurium black love"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriumblacklove(2).jpg" alt="Anthurium black love" title="Anthurium black love"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriumblacklove(3).jpg" alt="Anthurium black love" title="Anthurium black love"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriumblacklove(4).jpg" alt="Anthurium black love" title="Anthurium black love"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriumblacklove(5).jpg" alt="Anthurium black love" title="Anthurium black love"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriumblacklove(6).jpg" alt="Anthurium black love" title="Anthurium black love"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriumblacklove(7).jpg" alt="Anthurium black love" title="Anthurium black love"/>
+    </section>
+    <hr>
+            <div class="species-title-gallery-category" id="anthuriummadural">Anthurium madural
+                <a href="otherplantsindex.html#anthuriummadural">Voir la fiche info</a>
+            </div>
+            <hr>
+    <section>                                                                   <!-- ANTHURIUM MADURAL -->
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriummadural(1).jpg" alt="Anthurium madural" title="Anthurium madural"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriummadural(2).jpg" alt="Anthurium madural" title="Anthurium madural"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriummadural(3).jpg" alt="Anthurium madural" title="Anthurium madural"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriummadural(4).jpg" alt="Anthurium madural" title="Anthurium madural"/>
+    </section>
+    <hr>
+            <div class="species-title-gallery-category" id="anthuriumsamora">Anthurium samora
+                <a href="otherplantsindex.html#anthuriumsamora">Voir la fiche info</a>
+            </div>
+            <hr>
+    <section>                                                                   <!-- ANTHURIUM SAMORA -->
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriumsamora(1).jpg" alt="Anthurium samora" title="Anthurium samora"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriumsamora(2).jpg" alt="Anthurium samora" title="Anthurium samora"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriumsamora(3).jpg" alt="Anthurium samora" title="Anthurium samora"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/anthuriumsamora(4).jpg" alt="Anthurium samora" title="Anthurium samora"/>
     </section>
             <hr>
             <div class="species-title-gallery-category" id="strawberry">Caladium strawberry
