--- a/link/otherplantsindex.html
+++ b/link/otherplantsindex.html
@@ -19,12 +19,15 @@
                 <h1 class="title-index-category" id="top">MES AUTRES PLANTES VERTES</h1>
             </div>
             <section class="all-menu-scroll">                                       <!-- MENU DÉROULANT -->
-                <ul class="menu-scroll" onmouseover="changetext()" onmouseout="starttext()">   
+                <ul class="menu-scroll">   
                   <li class="menu-green"><a id="js-menu-change-text">Végétaux présents ici ...</a>
                     <ul>
                       <li><a href="#">Choisir une plante ...</a>
                         <ul>
                             <li><a href="#anthurium">Anthurium</a></li>
+                            <li><a href="#anthuriumblacklove">Anthurium black love</a></li>
+                            <li><a href="#anthuriummadural">Anthurium madural</a></li>
+                            <li><a href="#anthuriumsamora">Anthurium samora</a></li>
                             <li><a href="#strawberry">Caladium strawberry</a></li>
                             <li><a href="#jurassica">Solanum quitoense jurassica</a></li>
                             <li><a href="#sensation">Spathiphyllum sensation</a></li>
@@ -40,7 +43,7 @@
             </section>
         </header>
         <hr><hr>
-        <section class="index-category-system-tabs">                            <!-- ANTHURIUM-->
+        <section class="index-category-system-tabs">                            <!-- ANTHURIUM -->
             <nav-tabs class="index-category-nav-tabs" id="anthurium">
                 <a href="#anthurium1" aria-selected="true">Nom</a>
                 <a href="#anthurium2">Exposition en été</a>
@@ -56,7 +59,7 @@
                     <img src="../assets/img/otherplants/index/anthurium(4).jpg" alt="Anthurium" title="Anthurium"/>
                     <img src="../assets/img/otherplants/index/anthurium(5).jpg" alt="Anthurium" title="Anthurium"/>
             </div>   
-            <div class="index-category-tab-content" id="anthurium2" hidden="hidden">Je le mets en intérieur ou dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation lumineuse ou il ne recevra aucun rayon de soleil. <br/>Je ne laisse pas dehors les nuits ou la température doit passer sous les 15°C.
+            <div class="index-category-tab-content" id="anthurium2" hidden="hidden">Je le mets en intérieur ou dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation lumineuse ou il ne recevra aucun rayon de soleil. <br/>Je ne laisse pas dehors les nuits ou la température doit passer sous les 12°C.
             </div>
             <div class="index-category-tab-content" id="anthurium3" hidden="hidden">Je le place en intérieur dans une pièce ou la température ne passera pas sous les 18°C. 
             </div>
@@ -64,7 +67,89 @@
             </div>
             <div class="index-category-tab-content" id="anthurium5" hidden="hidden">Je les arrose un peu moins souvent, je laisse juste le substrat sécher un peu sur le haut.
             </div>
-            <div class="index-category-tab-content" id="anthurium6" hidden="hidden">J'utilise un simple terreau pour plantes d'intérieur mélangé avec de la fibre de coco. <br/> Je la garde dans un pot de bonne taille u ses nombreuses tiges.
+            <div class="index-category-tab-content" id="anthurium6" hidden="hidden">J'utilise un simple terreau pour plantes d'intérieur mélangé avec de la fibre de coco. <br/> Je la garde dans un pot de bonne taille vu ses nombreuses tiges.
+            </div>
+        </section>
+        <hr>
+        <section class="index-category-system-tabs">                            <!-- ANTHURIUM BLACK LOVE-->
+            <nav-tabs class="index-category-nav-tabs" id="anthuriumblacklove">
+                <a href="#anthuriumblacklove1" aria-selected="true">Nom</a>
+                <a href="#anthuriumblacklove2">Exposition en été</a>
+                <a href="#anthuriumblacklove3">Exposition en hiver</a>
+                <a href="#anthuriumblacklove4">Arrosage en été</a>
+                <a href="#anthuriumblacklove5">Arrosage en hiver</a>
+                <a href="#anthuriumblacklove6">Rempotage</a>
+            </nav-tabs>   
+            <div class="index-category-tab-content" id="anthuriumblacklove1"><span class="species">Anthurium black love<a href="otherplantsgallery.html#anthuriumblacklove">Voir la galerie photo</a></span>
+                    <img src="../assets/img/otherplants/index/anthuriumblacklove(1).jpg" alt="Anthurium black love" title="Anthurium black love"/>
+                    <img src="../assets/img/otherplants/index/anthuriumblacklove(2).jpg" alt="Anthurium black love" title="Anthurium black love"/>
+                    <img src="../assets/img/otherplants/index/anthuriumblacklove(3).jpg" alt="Anthurium black love" title="Anthurium black love"/>
+                    <img src="../assets/img/otherplants/index/anthuriumblacklove(4).jpg" alt="Anthurium black love" title="Anthurium black love"/>
+                    <img src="../assets/img/otherplants/index/anthuriumblacklove(5).jpg" alt="Anthurium black love" title="Anthurium black love"/>
+            </div>   
+            <div class="index-category-tab-content" id="anthuriumblacklove2" hidden="hidden">Je le mets en intérieur ou dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation lumineuse ou il ne recevra aucun rayon de soleil. <br/>Je ne laisse pas dehors les nuits ou la température doit passer sous les 12°C.
+            </div>
+            <div class="index-category-tab-content" id="anthuriumblacklove3" hidden="hidden">Je le place en intérieur dans une pièce ou la température ne passera pas sous les 18°C. 
+            </div>
+            <div class="index-category-tab-content" id="anthuriumblacklove4" hidden="hidden">J'arrose assez souvent afin que le substrat soit toujours un minimum humide. <br/>Je le fais par bassinage lorsque c'est possible ou de façon généreuse. <br/>N'aime pas l'air sec.
+            </div>
+            <div class="index-category-tab-content" id="anthuriumblacklove5" hidden="hidden">Je les arrose un peu moins souvent, je laisse juste le substrat sécher un peu sur le haut.
+            </div>
+            <div class="index-category-tab-content" id="anthuriumblacklove6" hidden="hidden">J'utilise un simple terreau pour plantes d'intérieur mélangé avec de la fibre de coco. <br/> Je la garde dans un pot de bonne taille vu ses nombreuses tiges.
+            </div>
+        </section>
+        <hr>
+        <section class="index-category-system-tabs">                            <!-- ANTHURIUM MADURAL-->
+            <nav-tabs class="index-category-nav-tabs" id="anthuriummadural">
+                <a href="#anthuriummadural1" aria-selected="true">Nom</a>
+                <a href="#anthuriummadural2">Exposition en été</a>
+                <a href="#anthuriummadural3">Exposition en hiver</a>
+                <a href="#anthuriummadural4">Arrosage en été</a>
+                <a href="#anthuriummadural5">Arrosage en hiver</a>
+                <a href="#anthuriummadural6">Rempotage</a>
+            </nav-tabs>   
+            <div class="index-category-tab-content" id="anthuriummadural1"><span class="species">Anthurium madural<a href="otherplantsgallery.html#anthuriummadural">Voir la galerie photo</a></span>
+                    <img src="../assets/img/otherplants/index/anthuriummadural(1).jpg" alt="Anthurium madural" title="Anthurium madural"/>
+                    <img src="../assets/img/otherplants/index/anthuriummadural(2).jpg" alt="Anthurium madural" title="Anthurium madural"/>
+                    <img src="../assets/img/otherplants/index/anthuriummadural(3).jpg" alt="Anthurium madural" title="Anthurium madural"/>
+                    <img src="../assets/img/otherplants/index/anthuriummadural(4).jpg" alt="Anthurium madural" title="Anthurium madural"/>
+            </div>   
+            <div class="index-category-tab-content" id="anthuriummadural2" hidden="hidden">Je le mets en intérieur ou dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation lumineuse ou il ne recevra aucun rayon de soleil. <br/>Je ne laisse pas dehors les nuits ou la température doit passer sous les 12°C.
+            </div>
+            <div class="index-category-tab-content" id="anthuriummadural3" hidden="hidden">Je le place en intérieur dans une pièce ou la température ne passera pas sous les 18°C. 
+            </div>
+            <div class="index-category-tab-content" id="anthuriummadural4" hidden="hidden">J'arrose assez souvent afin que le substrat soit toujours un minimum humide. <br/>Je le fais par bassinage lorsque c'est possible ou de façon généreuse. <br/>N'aime pas l'air sec.
+            </div>
+            <div class="index-category-tab-content" id="anthuriummadural5" hidden="hidden">Je les arrose un peu moins souvent, je laisse juste le substrat sécher un peu sur le haut.
+            </div>
+            <div class="index-category-tab-content" id="anthuriummadural6" hidden="hidden">J'utilise un simple terreau pour plantes d'intérieur mélangé avec de la fibre de coco. <br/> Je la garde dans un pot de bonne taille vu ses nombreuses tiges.
+            </div>
+        </section>
+        <hr>
+        <section class="index-category-system-tabs">                            <!-- ANTHURIUM SAMORA-->
+            <nav-tabs class="index-category-nav-tabs" id="anthuriumsamora">
+                <a href="#anthuriumsamora1" aria-selected="true">Nom</a>
+                <a href="#anthuriumsamora2">Exposition en été</a>
+                <a href="#anthuriumsamora3">Exposition en hiver</a>
+                <a href="#anthuriumsamora4">Arrosage en été</a>
+                <a href="#anthuriumsamora5">Arrosage en hiver</a>
+                <a href="#anthuriumsamora6">Rempotage</a>
+            </nav-tabs>   
+            <div class="index-category-tab-content" id="anthuriumsamora1"><span class="species">Anthurium samora<a href="otherplantsgallery.html#anthuriumsamora">Voir la galerie photo</a></span>
+                    <img src="../assets/img/otherplants/index/anthuriumsamora(1).jpg" alt="Anthurium samora" title="Anthurium samora"/>
+                    <img src="../assets/img/otherplants/index/anthuriumsamora(2).jpg" alt="Anthurium samora" title="Anthurium samora"/>
+                    <img src="../assets/img/otherplants/index/anthuriumsamora(3).jpg" alt="Anthurium samora" title="Anthurium samora"/>
+                    <img src="../assets/img/otherplants/index/anthuriumsamora(4).jpg" alt="Anthurium samora" title="Anthurium samora"/>
+            </div>   
+            <div class="index-category-tab-content" id="anthuriumsamora2" hidden="hidden">Je le mets en intérieur ou dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation lumineuse ou il ne recevra aucun rayon de soleil. <br/>Je ne laisse pas dehors les nuits ou la température doit passer sous les 15°C.
+            </div>
+            <div class="index-category-tab-content" id="anthuriumsamora3" hidden="hidden">Je le place en intérieur dans une pièce ou la température ne passera pas sous les 18°C. 
+            </div>
+            <div class="index-category-tab-content" id="anthuriumsamora4" hidden="hidden">J'arrose assez souvent afin que le substrat soit toujours un minimum humide. <br/>Je le fais par bassinage lorsque c'est possible ou de façon généreuse. <br/>N'aime pas l'air sec.
+            </div>
+            <div class="index-category-tab-content" id="anthuriumsamora5" hidden="hidden">Je les arrose un peu moins souvent, je laisse juste le substrat sécher un peu sur le haut.
+            </div>
+            <div class="index-category-tab-content" id="anthuriumsamora6" hidden="hidden">J'utilise un simple terreau pour plantes d'intérieur mélangé avec de la fibre de coco. <br/> Je la garde dans un pot de bonne taille vu ses nombreuses tiges.
             </div>
         </section>
         <hr>
