--- a/modal.html
+++ b/modal.html
@@ -17,6 +17,24 @@
                     <hr>
                         <div class="modal-update-left">
                             <ul>
+                                <li>                                            <!-- 07/08/2021 -->
+                                    <div class="modal-date-flex">
+                                            07/08/2021:
+                                    </div>
+                                    <div class="modal-desc-flex">
+                                        <div>
+                                            &nbsp;&nbsp;_Ajout 
+                                            <a href="link/otherplantsindex.html#anthuriumblacklove" alt="anthurium black love" title="anthurium black love"><strong>Anthurium black love</strong></a> (Mes autres plantes).<br/>
+                                            &nbsp;&nbsp;_Ajout 
+                                            <a href="link/otherplantsindex.html#anthuriummadural" alt="anthurium madural" title="anthurium madural"><strong>Anthurium madural</strong></a> (Mes autres plantes).<br/>
+                                            &nbsp;&nbsp;_Ajout 
+                                            <a href="link/otherplantsindex.html#anthuriumsamora" alt="anthurium samora" title="anthurium samora"><strong>Anthurium samora</strong></a> (Mes autres plantes).<br/>
+                                            &nbsp;&nbsp;_Ajout 
+                                            <a href="link/carnivorousindex.html#nepenthescadre" alt="nepenthes en cadre" title="nepenthes en cadre"><strong>Nepenthes en cadre</strong></a> (Mes carnivores).<br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment j'installe les <a class="species-repotting-info" href="link/nepenthescadre.html" alt="nepenthes en cadre variegata" title="nepenthes en cadre"><strong>Nepenthes en cadre.</strong></a><br>
+                                        </div>
+                                    </div>
+                                </li>
                                 <li>                                            <!-- 04/08/2021 -->
                                     <div class="modal-date-flex">
                                             04/08/2021:
