--- a/index.html
+++ b/index.html
@@ -268,6 +268,9 @@
                     <ul>
                         <li><a href="link/otherplantsindex.html">Accueil</a></li>
                         <li><a href="link/otherplantsindex.html#anthurium">Anthurium</a></li>
+                        <li><a href="link/otherplantsindex.html#anthuriumblacklove">Anthurium black love</a></li>
+                        <li><a href="link/otherplantsindex.html#anthuriummadural">Anthurium madural</a></li>
+                        <li><a href="link/otherplantsindex.html#anthuriumsamora">Anthurium samora</a></li>
                         <li><a href="link/otherplantsindex.html#strawberry">Caladium strawberry</a></li>
                         <li><a href="link/otherplantsindex.html#jurassica">Solanum quitoense jurassica</a></li>
                         <li><a href="link/otherplantsindex.html#sensation">Spathiphyllum sensation</a></li>
