--- a/link/gymnocaliciumgallery.html
+++ b/link/gymnocaliciumgallery.html
@@ -19,7 +19,7 @@
                 <h1 class="title-gallery-category" id="top"> Galerie photo de mes Gymnocalycium</h1>
             </div>
             <section class="all-menu-scroll">                                       <!-- MENU DÉROULANT -->
-                <ul class="menu-scroll" onmouseover="changetext()" onmouseout="starttext()">   
+                <ul class="menu-scroll">   
                   <li class="menu-green"><a id="js-menu-change-text">Végétaux présents ici ...</a>
                     <ul>
                       <li><a href="#">Choisir une plante ...</a>
