--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                         <li><a href="link/carnivorousindex.html">Accueil</a></li>
                         <li><a href="link/carnivorousindex.html#muscipula">Dionaea muscipula</a></li>
                         <li><a href="link/carnivorousindex.html#Nepenthes">Nepenthes</a></li>
+                        <li><a href="link/carnivorousindex.html#nepenthescadre">Nepenthes en cadre</a></li>
                         <li><a href="link/carnivorousindex.html#pinguicula">Pinguicula</a></li>
                         <li><a href="link/carnivorousindex.html#purpurea">Sarracenia purpurea</a></li>
                     </ul>
@@ -329,6 +330,7 @@
                 -->
                 <button class="btn-nav-header nav-phalaenopsis-column"><a href="link/phalaenopsiscolumn.html" alt="Comment j'installe des phalaenopsis en colonne" title="Comment j'installe des phalaenopsis en colonne" >Installation phalaenopsis en colonne</a></button>
                 <button class="btn-nav-header nav-phalaenopsis-suspended"><a href="link/phalaenopsissuspended.html" alt="Comment j'installe des phalaenopsis en suspension" title="Comment j'installe des phalaenopsis en suspension" >Installation phalaenopsis en suspension</a></button>
+                <button class="btn-nav-header nav-nepenthes-frame"><a href="link/nepenthescadre.html" alt="Comment j'installe des nepenthes en cadre" title="Comment j'installe des nepenthes en cadre" >Installation Nepenthes en cadre</a></button>
                 <button class="btn-nav-header nav-install-tillandsia"><a href="link/installtillandsia.html" alt="Comment j'accroche mes Tillandsia" title="Comment j'accroche mes Tillandsia" >Accrochage Tillandsia</a></button>
         </section>
 </footer>
