--- a/link/othercactusindex.html
+++ b/link/othercactusindex.html
@@ -7,8 +7,6 @@
     <link href="../assets/css/styles.css" rel="stylesheet" type="text/css"/>
     <link href="../assets/css/scrollmenu.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Akaya+Telivigala" rel='stylesheet' type='text/css'/>
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel='stylesheet' type='text/css'/>
-    <link href="https://fonts.googleapis.com/css?family=Pangolin" rel='stylesheet' type='text/css'/>
     <script type="text/javascript" src="../assets/js/protection.js"></script>
     <script src="../assets/js/ariatabs.js" type="module" Defer></script>
         <title>Mes Cactus</title>
@@ -180,6 +178,7 @@
             <div class="index-category-tab-content" id="subdenudata5" hidden="hidden">Je ne l'arrose pas du tout durant plusieurs mois.
             </div>
             <div class="index-category-tab-content" id="subdenudata6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut d'Akadama surtout car j'aime bien le rendu qui fait un peu désertique. <br/>J'en garde plusieurs dans une terrine percée pour avoir un petit effet de groupe.
+                <a class="species-repotting-info" href="repottingechinopsissubdenudata.html" alt="Rempotage Echinopsis subdenudata" title="Rempotage Echinopsis subdenudata">Voir comment je rempote les Echinopsis subdenudata</a>
             </div>
         </section>
         <hr>
@@ -400,11 +399,11 @@
             </div>
         </section>
         <hr>   
-    <nav class="btn-index-category">                                            <!-- BOUTONS DE NAVIGATION ET TOP -->
-        <button class="styled-btn-gallery"><a href="othercactusgallery.html">Galerie photos de mes autres Cactus</a></button>
-        <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
-        <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
-    </nav>
+<nav class="btn-index-category">                                                <!-- BOUTONS DE NAVIGATION ET TOP -->
+    <button class="styled-btn-gallery"><a href="othercactusgallery.html">Galerie photos de mes autres Cactus</a></button>
+    <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
+    <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
+</nav>
 <script type="text/javascript" src="../assets/js/sticky.js"></script>
 </body>
 </html>
