--- a/modal.html
+++ b/modal.html
@@ -31,7 +31,8 @@
                                             <a href="link/otherplantsindex.html#anthuriumsamora" alt="anthurium samora" title="anthurium samora"><strong>Anthurium samora</strong></a> (Mes autres plantes).<br/>
                                             &nbsp;&nbsp;_Ajout 
                                             <a href="link/carnivorousindex.html#nepenthescadre" alt="nepenthes en cadre" title="nepenthes en cadre"><strong>Nepenthes en cadre</strong></a> (Mes carnivores).<br/>
-                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment j'installe les <a class="species-repotting-info" href="link/nepenthescadre.html" alt="nepenthes en cadre variegata" title="nepenthes en cadre"><strong>Nepenthes en cadre.</strong></a><br>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment j'installe les <a class="species-repotting-info" href="link/nepenthescadre.html" alt="nepenthes en cadre" title="nepenthes en cadre"><strong>Nepenthes en cadre.</strong></a><br>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingechinopsissubdenudata.html" alt="Echinopsis subdenudata" title="Echinopsis subdenudata"><strong>Echinopsis subdenudata.</strong></a>
                                         </div>
                                     </div>
                                 </li>
@@ -41,7 +42,7 @@
                                     </div>
                                     <div class="modal-desc-flex">
                                         <div>
-                                            &nbsp;&nbsp;_Ajout de menus déroulants dans plusieurs index fiches infos et galeries regroupant la liste des espèces présentes sur les pages contenant au-moins 5 plantes. 
+                                            &nbsp;&nbsp;_Ajout de menus déroulants dans plusieurs index fiches infos et galeries regroupant la liste des espèces présentes sur les pages contenant au-moins 3 plantes. 
                                         </div>
                                     </div>
                                 </li>
