--- a/link/aloeindex.html
+++ b/link/aloeindex.html
@@ -5,23 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../assets/css/styles.css" rel="stylesheet" type="text/css"/>
+    <link href="../assets/css/scrollmenu.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Akaya+Telivigala" rel='stylesheet' type='text/css'/>
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel='stylesheet' type='text/css'/>
-    <link href="https://fonts.googleapis.com/css?family=Pangolin" rel='stylesheet' type='text/css'/>
     <script type="text/javascript" src="../assets/js/protection.js"></script>
     <script src="../assets/js/ariatabs.js" type="module" Defer></script>
         <title>Mes Aloe</title>
-    </head>
+</head>
     <body onload="prot()" id="aloe-background">
         <header>                                                                <!-- TITLE, SUB-TITLE ET ANCRES VERS PLANTES -->
             <div>
                 <h1 class="title-index-category" class="top">MES ALOE</h1>
             </div>
-                <h2 class="sub-title-index-category">Végétaux présents ici:
-                    <a href="#humilis">Aloe humilis,</a>
-                    <a href="#melanacantha">Aloe melanacantha,</a>
-                    <a href="#sp1">Aloe sp 1.</a>
-                </h2>
+            <section class="all-menu-scroll">                                       <!-- MENU DÉROULANT -->
+                <ul class="menu-scroll">   
+                  <li class="menu-green"><a id="js-menu-change-text">Végétaux présents ici ...</a>
+                    <ul>
+                      <li><a href="#">Choisir une plante ...</a>
+                        <ul>
+                            <li><a href="#humilis">Aloe humilis</a></li>
+                            <li><a href="#melanacantha">Aloe melanacantha</a></li>
+                            <li><a href="#sp1">Aloe sp 1</a></li>
+                        </ul>
+                      </li>
+                          <li><a href="#top">Haut de la page</a></li>
+                          <li><a href="aloegallery.html">Voir la galerie photos</a></li>
+                          <li><a href="../index.html">Retourner sur la page d'accueil</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </section>   
         </header>  
                 <hr><hr>
         <section class="index-category-system-tabs">                            <!-- ALOE HUMILIS -->
@@ -107,12 +119,12 @@
             </div>
             <div class="index-category-tab-content" id="melanacantha6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je le garde dans un pot en plastique de taille moyenne. <br/>Je garnis le haut d'Akadama car son rendu me plaît bien.
             </div>
-        </section>
-               
-        <nav class="btn-index-category">                                        <!-- BOUTONS DE NAVIGATION ET TOP -->
-            <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
-            <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
-            <button class="styled-btn-index"><a href="aloegallery.html">Galerie photos de mes Aloe</a></button>
-        </nav>
+        </section>         
+<nav class="btn-index-category">                                                <!-- BOUTONS DE NAVIGATION ET TOP -->
+    <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
+    <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
+    <button class="styled-btn-index"><a href="aloegallery.html">Galerie photos de mes Aloe</a></button>
+</nav>
+<script type="text/javascript" src="../assets/js/sticky.js"></script>
     </body>
 </html>
