--- a/link/crassulagallery.html
+++ b/link/crassulagallery.html
@@ -6,24 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../assets/css/styles.css" rel="stylesheet" type="text/css"/>
+    <link href="../assets/css/scrollmenu.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Akaya+Telivigala" rel='stylesheet' type='text/css'/>
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel='stylesheet' type='text/css'/>
-    <link href="https://fonts.googleapis.com/css?family=Pangolin" rel='stylesheet' type='text/css'/>
     <script type="text/javascript" src="../assets/js/protection.js"></script>
         <title>Galerie photo de mes Crassula</title>
-    </head>
+</head>
 <body onload="prot()" id="crassula-background">
  <main>   
 	<header>                                                                    <!-- TITLE, SUB-TITLE ET ANCRES VERS PLANTES -->
             <div>
                 <h1 class="title-gallery-category" id="top"> Galerie photo de mes Crassula</h1>
             </div> 
-                <h2 class="sub-title-gallery-category">Végétaux présents ici: 
-                    <a href="#ovata">ovata,</a>  
-                    <a href="#gollum">ovata gollum,</a> 
-                    <a href="#sunset">ovata sunset,</a>
-                    <a href="#pyramidalis">pyramidalis.</a>
-                </h2>       
+            <section class="all-menu-scroll">                                       <!-- MENU DÉROULANT -->
+                <ul class="menu-scroll">   
+                  <li class="menu-green"><a id="js-menu-change-text">Végétaux présents ici ...</a>
+                    <ul>
+                      <li><a href="#">Choisir une plante ...</a>
+                        <ul>
+                            <li><a href="#ovata">Crassula ovata</a></li>
+                            <li><a href="#gollum">Crassula ovata gollum</a></li>
+                            <li><a href="#sunset">Crassula ovata sunset</a></li>
+                            <li><a href="#pyramidalis">Crassula pyramidalis</a></li>
+                        </ul>
+                      </li>
+                          <li><a href="#top">Haut de la page</a></li>
+                          <li><a href="crassulaindex.html">Voir les fiches infos</a></li>
+                          <li><a href="../index.html">Retourner sur la page d'accueil</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </section>      
     </header>
             <hr>
             <div class="species-title-gallery-category" id="ovata">Crassula ovata
@@ -76,5 +88,6 @@
     <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
     <button class="styled-btn-index"><a href="crassulaindex.html">Page des Crassula</a></button>
 </nav>
+<script type="text/javascript" src="../assets/js/sticky.js"></script>
 </body>
 </html>
