--- a/link/orchidsgallery.html
+++ b/link/orchidsgallery.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../assets/css/styles.css" rel="stylesheet" type="text/css"/>
+    <link href="../assets/css/scrollmenu.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Akaya+Telivigala" rel='stylesheet' type='text/css'/>
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel='stylesheet' type='text/css'/>
-    <link href="https://fonts.googleapis.com/css?family=Pangolin" rel='stylesheet' type='text/css'/>
     <script type="text/javascript" src="../assets/js/protection.js"></script>
         <title>Galerie photo de mes autres Orchidées</title>
 </head>
@@ -17,12 +16,26 @@
         <div>
                 <h1 class="title-gallery-category" id="top"> Galerie photo de mes Orchidées</h1>
         </div>
-                <h2 class="sub-title-gallery-category">Végétaux présents ici: 
-                        <a href="#nobile">Dendrobium nobile,</a>  
-                        <a href="#maudiae">Paphiopedilum maudiae,</a> 
-                        <a href="#pinocchio">Paphiopedilum pinocchio,</a> 
-                        <a href="#planifolia">Vanilla planifolia.</a>
-                </h2>  
+        <section class="all-menu-scroll">                                       <!-- MENU DÉROULANT -->
+                <ul class="menu-scroll">   
+                  <li class="menu-green"><a id="js-menu-change-text">Végétaux présents ici ...</a>
+                    <ul>
+                      <li><a href="#">Choisir une plante ...</a>
+                        <ul>
+                                <li><a href="#nobile">Dendrobium nobile</a></li>
+                                <li><a href="#maudiae">Paphiopedilum maudiae</a></li>
+                                <li><a href="#pinocchio">Paphiopedilum pinocchio</a></li>
+                                <li><a href="#planifolia">Vanilla planifolia</a></li>
+                        </ul>
+                      </li>
+                                <li><a href="#top">Haut de la page</a></li>
+                                <li><a href="orchidsindex.html">Voir les fiches infos</a></li>
+                                <li><a href="../index.html">Retourner sur la page d'accueil</a></li>
+                    </ul>
+                  </li>
+                </ul>
+        </section>
+        </header>
         </header>
                 <hr>
                 <div class="species-title-gallery-category" id="nobile">Dendrobium nobile
@@ -73,5 +86,6 @@
     <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
     <button class="styled-btn-index"><a href="orchidsindex.html">Page des autres Orchidées</a></button>
 </nav>
+<script type="text/javascript" src="../assets/js/sticky.js"></script>
 </body>
 </html>
