--- a/link/orchidsindex.html
+++ b/link/orchidsindex.html
@@ -5,24 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../assets/css/styles.css" rel="stylesheet" type="text/css"/>
+    <link href="../assets/css/scrollmenu.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Akaya+Telivigala" rel='stylesheet' type='text/css'/>
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel='stylesheet' type='text/css'/>
-    <link href="https://fonts.googleapis.com/css?family=Pangolin" rel='stylesheet' type='text/css'/>
     <script type="text/javascript" src="../assets/js/protection.js"></script>
     <script src="../assets/js/ariatabs.js" type="module" Defer></script>
         <title>Mes  autres orchidées</title>
-  </head>
+</head>
     <body onload="prot()" id="orchids-background">
         <header>                                                                <!-- TITLE, SUB-TITLE ET ANCRES VERS PLANTES -->
            <div>
                 <h1 class="title-index-category" id="top">MES AUTRES ORCHIDÉES</h1>
               </div>
-                <h2 class="sub-title-index-category">Végétaux présents ici: 
-                  <a href="#nobile">Dendrobium nobile,</a>  
-                  <a href="#maudiae">Paphiopedilum maudiae,</a> 
-                  <a href="#pinocchio">Paphiopedilum pinocchio,</a> 
-                  <a href="#planifolia">Vanilla planifolia.</a>
-                </h2>
+              <section class="all-menu-scroll">                                       <!-- MENU DÉROULANT -->
+                <ul class="menu-scroll">   
+                  <li class="menu-green"><a id="js-menu-change-text">Végétaux présents ici ...</a>
+                    <ul>
+                      <li><a href="#">Choisir une plante ...</a>
+                        <ul>
+                                <li><a href="#nobile">Dendrobium nobile</a></li>
+                                <li><a href="#maudiae">Paphiopedilum maudiae</a></li>
+                                <li><a href="#pinocchio">Paphiopedilum pinocchio</a></li>
+                                <li><a href="#planifolia">Vanilla planifolia</a></li>
+                        </ul>
+                      </li>
+                                <li><a href="#top">Haut de la page</a></li>
+                                <li><a href="orchidsgallery.html">Voir la galerie photos</a></li>
+                                <li><a href="../index.html">Retourner sur la page d'accueil</a></li>
+                    </ul>
+                  </li>
+                </ul>
+        </section>
         </header>
             <hr><hr>
       <section class="index-category-system-tabs">                              <!-- DENDROBIUM NOBILE -->
@@ -127,10 +139,11 @@
         </div>
       </section>
         <hr>
-        <nav class="btn-index-category">                                        <!-- BOUTONS DE NAVIGATION ET TOP -->
-          <button class="styled-btn-gallery"><a href="orchidsgallery.html">Galerie photos de mes autres Orchidées</a></button>
-          <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
-          <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
-      </nav>
+<nav class="btn-index-category">                                                <!-- BOUTONS DE NAVIGATION ET TOP -->
+  <button class="styled-btn-gallery"><a href="orchidsgallery.html">Galerie photos de mes autres Orchidées</a></button>
+  <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
+  <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
+</nav>
+<script type="text/javascript" src="../assets/js/sticky.js"></script>
     </body>
 </html>
